[package]
name = "slatedb_hang_write_pressure_repro"
version = "0.1.0"
edition = "2024"

[dependencies]
slatedb = { git = "https://github.com/Barre/slatedb.git", rev = "98d265b9734f09c56c5ed72911bb0041d3bc600a" }
tokio = { version = "1.45.1", features = ["full"] }
console-subscriber = "0.4.1"
rand = "0.9.1"
object_store = "0.12.1"
